fix: исправлен поиск JavaFX, вывод на английском